[package]
name = "sparx"
version = "0.2.0"
edition = "2021"
description = "Minimal image-to-terminal renderer. Braille + truecolor ANSI."
license = "MIT"
repository = "https://github.com/abbudjoe/sparx"

[lib]
name = "sparx"
path = "src/lib.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[[bin]]
name = "sparx"
path = "src/main.rs"
